# o_infra

./: .gitignore  README.md  pyproject.toml
docs/: asdf_install.md  debian_12_gpu.md  dependencies_to_build_python_on_debian_12.md  install_neovim_from_source.md  preparing_proxmox.md  preparing_variables_apps.md  preparing_variables_for_k0s.md  qemu_intro.md
docs/proxmox/: create_cloud_init.md  create_lxc_container.md  new_proxmox.md  proxmox_gpu_nvidia.md  proxmox_gpu_passthrough.md  proxmox_pendrive.md  terraform_plugin_for_proxmox.md
kubernetes/: create_all  destroy_all  fire
kubernetes/0-create_cluster/gke/: 0-provider.tf  1-vpc.tf  3-router.tf  5-firewalls.tf  6-kubernetes.tf  7-node-pools.tf  terraform.tfvars  variables.tf
kubernetes/0-create_cluster/proxmox_k0s/: create_all  destroy_all
kubernetes/1-configure_cluster/0-helm_config/: helm_config  mlb.yaml
kubernetes/1-configure_cluster/1-nginx-ingress/: create
kubernetes/1-configure_cluster/2-certmanager/: create  issuer_dns0.yaml
kubernetes/1-configure_cluster/3-longhorn/: create  values.yaml
kubernetes/1-configure_cluster/3-rancher/: create  ingress.yaml  values.yaml
kubernetes/1-configure_cluster/4-baserow/: complete.yaml  create
kubernetes/1-configure_cluster/4-chatwoot/: create  destroy  values.yaml
kubernetes/1-configure_cluster/4-evolution_api/: complete.yaml  create
kubernetes/1-configure_cluster/4-n8n/: create  values.yaml
kubernetes/1-configure_cluster/5-langflow/: create  (+1 more)
scripts/: create_ssh_key_and_set_in_terraform  get_latest_proxmox_provider
test/: test.yaml  whoami.yaml
(+31 files in other folders)
